# proxbot

./: .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  index.html  package.json  pnpm-lock.yaml  vite.config.js  vite.config.ts
.codex/: config.toml
.github/workflows/: quality.yml  release.yml
apps/mcp-server/: README.md  package.json  tsconfig.json
artifacts/solana/: ch-account-funds.csv  ch-account-interaction-map.json  ch-atomic-flow-correlations.csv  ch-cpi-capability-map.json  ch-method-capabilities.csv
docs/engineering/: production-readiness.md
docs/research/: 2026-07-23-ch-account-interaction-map.md  2026-07-23-kamino-withdraw-signing-flow.md  2026-07-23-live-ch-self-signed-self-transfer.md  2026-07-23-live-two-signer-kamino-deposit.md
docs/testing/: 0.2.0-rc.1-verification.md  foundation-verification.md  (+1 more)
scripts/: build-provider-sidecar.sh  build-proxy-sidecar.sh  generate-third-party-notices.py  prepare-single-signer-sol-self-transfer.mjs  prepare-two-signer-sol-transfer.mjs  proxbot-mcp  repository-hygiene.mjs  verify-version-parity.mjs
sidecars/ios-provider/: README.md  provider_entry.py  pyproject.toml
sidecars/ios-provider/src/proxbot_ios_provider/: cli.py  device_provider.py  fake.py  frida_provider.py  live_provider.py  log_provider.py  pcap_provider.py  protocol.py  protocol_enrichment.py  secure_output.py
sidecars/ios-provider/src/tracelab_ios_provider/: cli.py
sidecars/ios-provider/tests/: test_device_provider.py  test_fake.py  test_frida_provider.py  test_live_provider.py  test_log_provider.py  test_pcap_provider.py  test_protocol.py  test_protocol_enrichment.py  test_secure_output.py
sidecars/proxy-provider/: README.md  provider_entry.py  pyproject.toml
sidecars/proxy-provider/src/proxbot_proxy_provider/: __init__.py  addon.py  artifacts.py  cli.py  events.py  mitm_addon.py  protocol.py  secure_output.py  wireguard.py
sidecars/proxy-provider/tests/: test_addon.py  test_artifacts.py  test_cli.py  test_protocol.py  test_wireguard.py
src/: App.smoke.test.tsx  App.test.tsx  App.tsx  app.html  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_events.sql  0002_exchanges.sql
src-tauri/src/: app_state.rs  capture.rs  commands.rs  control.rs  lib.rs  main.rs
src-tauri/src/domain/: event.rs  session.rs
src-tauri/src/provider/: codec.rs  mod.rs  runtime.rs  supervisor.rs
src-tauri/src/store/: artifact_reader.rs  event_index.rs  exchange_index.rs  mod.rs  session_store.rs
src-tauri/tests/: commands_contract.rs  control_bridge.rs  domain_contract.rs  event_index_integrity.rs  exchange_index.rs  fake_capture.rs  live_capture_contract.rs  provider_protocol.rs  provider_runtime.rs  session_store.rs
(+53 files in other folders)
