[package]
name = "trace-lab"
version = "0.1.0"
description = "TraceLab desktop capture and analysis application"
authors = ["TraceLab"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "trace_lab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.24.0", features = ["v4", "serde"] }
thiserror = "2.0.19"
anyhow = "1.0.104"
rusqlite = { version = "0.40.1", features = ["bundled"] }
sha2 = "0.11.0"
hex = "0.4.3"

[dev-dependencies]
tempfile = "3.27.0"
