[project]
name = "tracelab-ios-provider"
version = "0.1.0"
description = "TraceLab iOS and Frida provider"
requires-python = ">=3.12"
dependencies = [
  "frida>=17.8,<18",
  "msgpack>=1.1,<2",
]

[project.optional-dependencies]
test = ["pytest>=8.4,<9"]

[project.scripts]
tracelab-ios-provider = "tracelab_ios_provider.cli:main"

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
