[project]
name = "proxbot-ios-provider"
version = "0.2.0rc1"
description = "proxbot iOS and Frida provider"
requires-python = ">=3.12"
dependencies = [
  "frida==17.16.4",
  "msgpack>=1.1,<2",
  "pymobiledevice3==9.12.0",
]

[project.optional-dependencies]
test = ["pytest>=8.4,<9"]
build = ["pyinstaller==6.21.0"]

[project.scripts]
proxbot-ios-provider = "proxbot_ios_provider.cli:main"

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
