[project]
name = "proxbot-proxy-provider"
version = "0.2.0rc1"
description = "Optional high-fidelity mitmproxy provider for proxbot"
requires-python = ">=3.12"
dependencies = [
  "cryptography==48.0.1",
  "mitmproxy==12.2.3",
  "msgpack>=1.1,<2",
]

[project.optional-dependencies]
test = ["pytest>=8.4,<9"]
build = ["pyinstaller==6.21.0"]

[project.scripts]
proxbot-proxy-provider = "proxbot_proxy_provider.cli:main"

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
